<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memory Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_logout_txt">Logout</string>
    <string name="parse_class_level">Level</string>
    <string name="parse_class_1on1_level">OneOnOneLevel</string>
    <string name="parse_class_1on1_game">OneOnOneGames</string>
    <string name="parse_field_level_levelno">levelno</string>
    <string name="parse_field_level_noOfComp">noOfComponents</string>
    <string name="parse_field_level_ordering">ordering</string>
    <string name="parse_field_level_speed">speed</string>
    <string name="parse_field_level_time">time</string>
    <string name="parse_field_level_points">points</string>
    <string name="parse_field_user_score">score</string>
    <string name="parse_field_user_level">level</string>
    <string name="parse_field_1on1_level_levelno">levelno</string>
    <string name="parse_field_1on1_level_noOfComp">noOfComponents</string>
    <string name="parse_field_1on1_level_ordering">ordering</string>
    <string name="parse_field_1on1_level_speed">speed</string>
    <string name="parse_field_1on1_level_points">points</string>
    <string name="parse_field_1on1_game_userA">userA</string>
    <string name="parse_field_1on1_game_userB">userB</string>
    <string name="parse_field_1on1_game_scoreA">scoreA</string>
    <string name="parse_field_1on1_game_scoreB">scoreB</string>
    <string name="parse_field_1on1_game_statusA">statusA</string>
    <string name="parse_field_1on1_game_statusB">statusB</string>

    <string-array name="availableColors">
        <item>F44336</item>
        <item>E91E63</item>
        <item>9C27B0</item>
        <item>673AB7</item>
        <item>3F51B5</item>
        <item>2196F3</item>
        <item>03A9F4</item>
        <item>00BCD4</item>
        <item>009688</item>
        <item>4CAF50</item>
        <item>8BC34A</item>
        <item>CDDC39</item>
        <item>FFEB3B</item>
        <item>FFC107</item>
        <item>FF9800</item>
        <item>FF5722</item>
        <item>795548</item>
        <item>9E9E9E</item>
        <item>607D8B</item>
        
    </string-array>

    <string name="play_btn_text">Lets Play!</string>
    <string name="btn_txt_nxt_level">Next Level</string>
    <string name="btn_txt_retry">Retry</string>
    <string name="menu_item_leaderboard_txt">Leaderboard</string>
    <string name="menu_item_standing_txt">Standing</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_standings">Standings</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_to_do">ToDoActivity</string>
    <string name="name">First Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="cancel">CANCEL</string>
    <string name="new_account">NEW USER</string>
    <string name="alertTextHint">Enter Text</string>
    <string name="logoutTxt">Logout</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="title_activity_one_on_one">1-On-1</string>
    <string name="selectPlayerHint">Input Player Email</string>
    <string name="requestBtnTxt">Request</string>
    <string name="meTxt">Me</string>
    <string name="menu_item_one_on_one_txt">1-on-1</string>
    <string name="title_activity_splash_fragment">SplashFragment</string>
    <string name="facebook_app_id">442063385971787</string>
    <string name="or">OR</string>
    <string name="parse_field_user_firstname">firstName</string>
    <string name="menu_item_announce_on_fb_txt">Publish Score on Fb</string>
    <string name="title_activity_fb_publish_score">Publish Score on fb</string>
    <string name="memoryGameTitleTxt">Memory Game</string>
    <string name="oneOnOneText">LAST 5 1-ON-1s</string>
    <string name="vsTxt">vs</string>

</resources>